# watch-with-friends

./: .gitignore  README.md  README.org  heroku.yml
django/: .dockerignore  Dockerfile  Makefile  docker-compose-prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  shell.nix  web_entrypoint.sh  web_entrypoint_heroku.sh
django/celery_worker/: Dockerfile
django/config/: __init__.py  celery.py  redis.py  routing.py  urls.py  wsgi.py
django/config/settings/: __init__.py  base.py  dev.py  prod.py
django/docker/: Dockerfile  docker-compose-dev.yml  docker-compose.yml  web_entrypoint.sh  web_entrypoint_dev.sh
django/docker/celery_worker/: Dockerfile
django/docker/nginx/conf.d/: app.conf
django/docs/source/: conf.py  index.rst
django/nginx/conf.d/: app.conf
django/rooms/: admin.py  apps.py  consumers.py  forms.py  middleware.py  models.py  routing.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py  widgets.py
django/rooms/migrations/: 0001_initial.py  0002_alter_room_video.py  0002_room_video.py  0003_alter_room_name.py  0003_auto_20191215_2223.py  0004_auto_20191218_1724.py  0005_auto_20191227_1937.py
django/rooms/templates/: index.djhtml  room.djhtml  room_create.djhtml
django/rooms/templates/widgets/: custom_file_upload.djhtml
django/rooms/templatetags/: room_exists.py  text_script.py  youtube_video_id.py
django/rooms/tests/: test_celery.py  test_channels.py  test_forms.py  test_models.py  test_views.py
django/static/: package-lock.json  package.json  tsconfig.json  webpack.config.js
django/static/coffee/rooms/: AlertMessage.coffee  ChatMessage.coffee  ConnectedUser.coffee  HLSFileWaiter.coffee  index.coffee  room.coffee  roomCreate.coffee  selectTools.coffee  showVideoField.coffee  video.coffee  websockets.coffee
django/static/css/: index.css
django/static/js/: main.js
django/static/js/rooms/: AlertMessage.js  ChatMessage.js  ConnectedUser.js  alertMessages.js  createAlertMessage.js  createMessage.js  index.js  newMessageDiv.js  room.js  roomCreate.js  selectTools.js  showVideoField.js  slugify.js  userSpan.js  video.js  websockets.js
django/static/ts/: Component.ts  Serializable.ts  SizedSet.ts  documentTools.ts  selectTools.ts
django/static/ts/rooms/: AlertMessage.ts  ChatMessage.ts  (+16 more)
django/templates/: base.djhtml  title.djhtml
django/templates/account/: login.html  logout.html  signup.html
django/users/: urls.py  views.py
django/users/templates/: signup.djhtml
django/webpack/: index.js  main.js  package-lock.json  package.json  webpack.config.js
(+3 files in other folders)
