[tool.poetry]
name = "watch-with-friends"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "*"
python-dotenv = "*"
python-decouple = "*"
psycopg2-binary = "*"
sphinx = "*"
coverage = "*"
django-crispy-forms = "*"
django-extensions = "*"
pillow = "*"
gunicorn = "*"
channels = "*"
django-celery-results = "*"
redis = "*"
channels-redis = "*"
selenium = "^3.141"
webdriver_manager = "^2.3"
celery = "4.4.0"
django-debug-toolbar = "^2.1"
whitenoise = "^5.0"
django_select2 = "^7.1.2"
django-allauth = "^0.41.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
