[tool.poetry]
name = "watch-with-friends"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotiuk <yevhenshymotiuk@pm.me>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "3.2.5"
python-dotenv = "0.19.0"
python-decouple = "3.4"
django-crispy-forms = "1.12.0"
django-extensions = "3.1.3"
pillow = "8.3.1"
channels = "3.0.4"
django-celery-results = "2.0.1"
redis = "3.2.0"
channels-redis = "3.3.0"
webdriver_manager = "2.3"
celery = "4.4.0"
whitenoise = "5.0"
django_select2 = "7.1.2"
django-allauth = "0.41.0"
hiredis = "2.0.0"
markupsafe = "2.0.1"
psycopg2 = "2.9.1"

[tool.poetry.dev-dependencies]
pylint = "2.9.6"
pylint-django = "2.4.4"
mypy = "0.910"
types-redis = "3.5.6"
django-debug-toolbar = "3.2.2"
sphinx = "4.1.1"
selenium = "3.141"
coverage = "5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
